projects/compiler/test/typechecker/assignment/accessor_error_type_mismatch.2.out
Error at %FILE_NAME%:5:7
Type mismatch
  |  f.a = a
           ^
Expected: Int
but instead found: Int?
